--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <title>ArcGIS Maps SDK for JavaScript Tutorials: Display a map</title>
+<script>
 
+  var esriConfig = {
+    apiKey: "AAPTxy8BH1VEsoebNVZXo8HurNAUgv3aeRUmzJ4ckMevLQKgG4hUFNpVgvKssYFGZYuUJwAf54eT09wwem1fek8LqHCs8ol9Zj2bv6RX2892lTGyqiWva8gvkupVPwFPRiaci0igQlY-wTMynUw1CoefA3kZR7zHM_sG1ZR4BEyeUGInNqQAETwVb2h-hZVWRqP0MB41SSc4LmiSjLrRr8nFwF07jcUnH7PkW1LuaE-0Ivo.AT1_u2oIILva
+"
+  };
+
+</script>
     <link rel="stylesheet" type="text/css" href="https://js.arcgis.com/calcite-components/2.13.2/calcite.css" />
     <script type="module" src="https://js.arcgis.com/calcite-components/2.13.2/calcite.esm.js"></script>
 
@@ -29,6 +36,7 @@
   <body>
     <arcgis-map basemap="arcgis/topographic" center="-118.805, 34.027" zoom="13">
         <arcgis-zoom position="top-left"></arcgis-zoom>
+        
     </arcgis-map>
   </body>
   </html>
